--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,7 +5,7 @@
     max-height: 50rem;
     overflow-y: scroll;
     border: 2px solid #ddd;
-    border-width: 0 2px 4px 0;
+    border-width: 4px 2px 4px 1px;
     border-radius: 0 0 3rem 0;
     background: white;
     font-size: 1.25rem;
@@ -18,6 +18,7 @@
     margin-left: 0;
     margin-right: 0;
     padding-left: 2rem;
+    border-width: 0 0.2rem 0.4rem 0;
     box-shadow: 1rem 2rem 5rem 0.2rem #eee;
 }
 .tree-test .c-kmaptree {
