--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -233,8 +233,10 @@
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #ddd;
+    border-top-width: 0.3rem;
     border-bottom-width: 0.3rem;
     border-radius: 0.5rem 0.5rem 1.5rem 1.5rem;
+    border-color: #929ae4 #ddd;
     padding: 0.3rem 0.8rem;
     font-size: 1.3rem;
     color: #333;
