--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -178,7 +178,8 @@
     margin: 0.5rem 0 0.2rem;
     text-transform: capitalize;
     cursor: default;
-    background: #f0f0f0;
+    color: #000;
+    background: #f7f7f7;
     border: 1px solid #c4c8ef;
     border-width: 0.2rem 0.1rem 0.2rem;
     border-radius: 0.5rem;
