--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -3,13 +3,13 @@
 // --------------------------------------
 
 .c-site__header {
-    height: 44px;
+    height: 4.5rem;
     padding: 0;
     background: #fff;
     display: flex;
 }
 .c-site__header-standalone {
-    height: 40px;
+    height: 4.5rem;
     padding: 0;
     display: none;
 }
@@ -44,7 +44,7 @@
     display: -webkit-flex;
     display: flex;
     height: 3.8rem;
-    margin-right: 18rem;
+    margin-right: 19rem;
     padding-left: 1.75rem;
     padding-top: 0;
     border-left: 0.2rem solid #d0d0d0;
