--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -57,23 +57,32 @@ body.html {
     resize: horizontal;
     overflow: visible !important;
     .advanced-search-and-tree {
-        /*border-left: 2px solid #ccc;
-        border-right: 2px solid #ccc;*/
         border: none;
-        top: -3.2rem;
+        top: -3.45rem;
         position: relative;
     }
 }
+.l-content__main__wrap {
+    max-width: 90rem;
+    margin: 0 auto;
+}
 
+/*
 .terms .l-content__main__wrap,
 .subjects .l-content__main__wrap {
     max-width: 90rem;
     margin: 0 auto;
 }
+.terms .l-content__main__wrap {
 
+}
+.places .l-content__main__wrap {
+
+}
 .texts .l-content__main {
     display: block;
 }
+*/
 
 a {
     text-decoration: none;
@@ -160,8 +169,8 @@ div.image-wrapper.center figcaption {
     background-color: #fcfcfc;
     border: 1px solid #ccc;
     border-radius: 0.5rem;
-    padding: 0.25rem 1.5rem 6rem 1.5rem;
-    font-size: 1.325rem;
+    padding: 0.5rem 1.5rem 6rem 1.5rem;
+    font-size: 1.375rem;
     /* height: 100vh;*/
     min-height: 75rem;
     position: relative;
@@ -312,6 +321,7 @@ div.image-wrapper.center figcaption {
 .c-nodeHeader {
     margin-bottom: 1.25rem;
     padding-bottom: 0;
+    padding-left: 1rem;
 }
 .c-nodeHeader > .icon {
     margin: 0 1.25rem 0 0;
@@ -512,7 +522,7 @@ ul.fancytree-container {
 }
 .l-column__search.c-TreeNav--tabs {
     padding-right: 1rem;
-    padding-top: 0.6rem;
+    padding-top: 1rem;
 }
 .l-column__search.open.standalone {
     z-index: inherit;
@@ -540,7 +550,7 @@ ul.fancytree-container {
 .l-column__search nav.justify-content-end {
     float: right;
     padding: 0.5rem 0 0;
-    margin-right: 1rem;
+    margin-right: 0.8rem;
 }
 .l-column__search nav.justify-content-end > a .icon::before {
     color: #b8860b;
@@ -691,10 +701,13 @@ ul.fancytree-container {
     padding-right: 1.5rem;
 }
 .c-buttonGroup__viewMode-header {
-    font-size: 1.2rem;
+    font-size: 1.25rem;
     margin-right: 0.8rem;
     white-space: nowrap;
-    font-style: italic;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 2.5;
+    letter-spacing: 0.025rem;
 }
 
 .c-buttonGroup__viewMode .icon::before {
