--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -41,7 +41,7 @@
     left: 50%;
     z-index: 1005;
     margin-left: -0.6rem;
-    background-color: #4d59ca;
+    background-color: transparent;
 }
 .c-MainSearchToggle--group label.btn.active svg {
     color: #fff;
