--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -181,7 +181,7 @@
     color: #000;
     background: #f7f7f7;
     border: 1px solid #c4c8ef;
-    border-width: 0.2rem 0.1rem 0.2rem;
+    border-width: 0.2rem 0.1rem 0.2rem 0.5rem;
     border-radius: 0.5rem;
 }
 
