--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -50,8 +50,8 @@ body.html {
     /*  flex: 0 0 28rem;*/
     /*min-width: 25%;*/
     margin: 0;
-    /*   max-width: 35rem;
-    min-width: calc(max(25vw, 290px)); */
+    max-width: 45rem;
+    min-width: calc(max(25vw, 30rem));
     font-size: 1.4rem;
     background-color: #fff;
     resize: horizontal;
