--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -81,7 +81,7 @@
     width: 100%;
     margin: 1rem;
     padding: 0.4rem 1rem;
-    color: white;
+    /* color: white; */
     font-weight: bold;
     font-size: 1.45rem;
 }
