--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -49,8 +49,7 @@ body.html {
 .l-content__rightsidebar {
     /*  flex: 0 0 28rem;*/
     /*min-width: 25%;*/
-    flex: 0 0 !important;
-    margin: 0;
+    margin: 0 0 9rem;
     max-width: 45rem;
     min-width: calc(max(25vw, 32rem));
     font-size: 1.4rem;
@@ -59,8 +58,9 @@ body.html {
     overflow: visible !important;
     .advanced-search-and-tree {
         border: none;
-        top: -3.45rem;
-        position: relative;
+        /*top: -3.45rem;
+        position: relative;*/
+        margin-top: -3.4rem;
     }
 }
 .l-content__main__wrap {
@@ -173,7 +173,7 @@ div.image-wrapper.center figcaption {
     padding: 0.5rem 1.5rem 6rem 1.5rem;
     font-size: 1.375rem;
     /* height: 100vh;*/
-    min-height: 75rem;
+    min-height: 70rem;
     position: relative;
 }
 // * Local fix for responsive display - temp
@@ -537,7 +537,7 @@ ul.fancytree-container {
     border-left: none;
 }
 .l-column__search .navbar-expand {
-    padding: 1rem 0 0 2rem;
+    padding: 0.25rem 0 0 2rem;
     flex-flow: row wrap;
 }
 .l-column__search .navbar-expand .navbar-collapse {
@@ -587,12 +587,12 @@ ul.fancytree-container {
 }
 
 .l-column__search nav:nth-of-type(2) > a {
-    font-size: 1.5rem;
+    font-size: 2.25rem;
     font-weight: bold;
     letter-spacing: 0.075rem;
     text-transform: uppercase;
-    margin-right: 2rem;
-    margin-bottom: 0.75rem;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
 }
 .l-column__search nav:nth-of-type(2) > a:hover {
     color: $color-mandala;
@@ -643,8 +643,14 @@ ul.fancytree-container {
 .l-column__search nav:nth-of-type(2) > a:active .badge {
     color: #4d59ca;
 }
-.l-column__search nav:nth-of-type(2) > a .badge-secondary {
-    /* display: none;  this temporarily hides the search count total number */
+.l-column__search nav:nth-of-type(2) .badge-secondary {
+    margin: 0 2rem 0 1rem;
+    position: relative;
+    top: -0.2rem;
+}
+.l-column__search nav:nth-of-type(2) > span {
+    font-size: 1.625rem;
+    font-weight: bold;
 }
 /*
 .l-column__search > section {
