--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -10,7 +10,7 @@
     background: white;
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
-    box-shadow: inset 0 -3rem 5rem #eee;
+    box-shadow: inset 0 -1rem 3rem #f0f0f0;
 }
 .l-column__search .c-kmaptree {
     max-height: 75rem;
