--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -429,7 +429,7 @@ ul.fancytree-container {
 }
 .advanced-search-and-tree .nav-tabs {
     padding: 0 0 0.5rem;
-    margin: 0 1rem 1rem;
+    margin: 0 0 0 1rem;
 }
 .advanced-search-and-tree .nav-tabs .nav-link {
     padding: 0 0.3rem;
