--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -10,17 +10,17 @@
     background: white;
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
-    box-shadow: inset 0 -1rem 3rem #e0e0e0;
+    box-shadow: inset -1rem -2rem 3rem #e0e0e0a6;
 }
 .l-column__search .c-kmaptree {
     max-height: 75rem;
     min-height: 75rem;
-    margin-top: 1.75rem;
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+    padding-top: 1rem;
     padding-left: 2rem;
     border-width: 0 0.2rem 0.4rem 0;
-    /*box-shadow: 1rem 2rem 5rem 0.2rem #eee;*/
 }
 .tree-test .c-kmaptree {
     height: 80vh;
