--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -33,6 +33,7 @@
 .c-perspective-select {
     white-space: nowrap;
     font-size: 1.15rem;
+    margin-top: 0.75rem;
     label {
         display: inline-block;
         font-weight: bold;
