--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -243,6 +243,7 @@
     color: #333;
     margin: 0 0 0.75rem;
     overflow: auto !important;
+    box-shadow: inset -1rem -2rem 3rem #c0c3d03d;
 }
 
 .sui-advBox:first-child .sui-advEdit {
