--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -36,8 +36,8 @@
 #av-meta-row {
     overflow: visible;
     margin-top: 2rem !important;
-    width: 98%;
-    max-width: 200rem;
+    /* width: 98%;
+    max-width: 200rem; */
     margin: 0 auto;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif, shanticon;
 }
@@ -147,83 +147,95 @@ div#av-trscrpt-wrapper {
 }
 
 #av-trscrpt-wrapper .av-trscrpt-ctrls .sui-transTab {
-    height: 52px;
-    padding-top: 1.4rem;
+    /* height: 6rem;
+    padding-top: 1.4rem;*/
 }
 #av-trscrpt-wrapper .av-trscrpt-ctrls .sui-transTab {
-    font-size: 2rem;
+    /* font-size: 2.5rem;*/
 }
 #av-trscrpt-wrapper .av-trscrpt-ctrls #sui-transTab1 {
     font-size: 1.75rem;
+    padding-top: 1.8rem;
 }
 #sui-transSrc .transSrcWrap {
     display: flex;
 }
-
 #sui-transSrc .navigator {
     display: inline-block;
-    margin: 14px 0 0 16px;
+    margin: 2.2rem auto 0;
     user-select: none;
     flex-grow: 2;
+    /* text-align: center;*/
+    /* white-space:nowrap; */
 }
-
+#sui-transSrc .navwrapper {
+    min-width: 13rem;
+    padding: 0 2rem;
+}
+#sui-transSrc .navwrapper > div:last-child,
+#sui-transSrc .navwrapper > div:first-child {
+    font-size: 1.25rem !important;
+}
+#sui-transSrc .navwrapper > div:nth-of-type(2) {
+    margin: 0.25rem 0.5rem !important;
+    position: relative;
+    top: 0.35rem;
+}
 div#sui-transSrcGo {
-    padding-top: 1.25rem;
-    padding-right: 1rem;
+    margin-top: 1.75rem;
+    position: relative;
 }
-
-div#sui-transSrcGo input#sui-transSrcInp {
+div#sui-transSrcGo input {
     color: #333;
-    border: 1px solid #d0d0d0;
+    border: 1px solid #d0d0d0 !important;
     border-radius: 1.8rem;
     background-clip: padding-box;
-    font-size: 1.5rem;
-    height: 2em;
-    margin: 0rem 2rem 0rem 2rem;
-    padding: 0.2rem 4rem 0 3.7rem;
-    max-width: 88%;
+    font-size: 1.85rem;
+    height: 3.5rem;
+    margin: 0 2rem;
+    padding: 0 4rem;
     overflow: auto;
     vertical-align: middle;
-    box-shadow: 0 2px 4px #999 inset;
+    box-shadow: 0 0.5rem 1rem #aaa inset;
     border-collapse: separate;
     background: #fff;
-    -webkit-transition-property: all;
     transition-property: all;
-    -webkit-transition-duration: 400ms;
     transition-duration: 400ms;
 }
-
-div#sui-transSrcGo input#sui-transSrcInp:focus {
+div#sui-transSrcGo input:focus {
     outline: none;
 }
 
 div#sui-transSrcGo .icon.search {
     position: absolute;
-    right: 38.8rem;
-    top: 7.1rem;
-    font-size: 1.38rem;
+    right: 73%;
+    top: 0.75rem;
+    font-size: 1.75rem;
     color: #999;
 }
-
 .firefox div#sui-transSrcGo .icon.search {
     right: 50%;
 }
-
 .safari div#sui-transSrcGo .icon.search {
     right: 50%;
 }
 
+div#sui-transSrcGo input.sui-search2 {
+    max-width: 75%;
+}
+
 div#sui-transSrcGo button.search {
     position: absolute;
-    right: 6.65%;
-    top: 6.7rem;
+    right: 2.8rem;
+    top: 1.5rem;
     width: 3.5rem;
     height: 2.76rem;
     border-radius: 0 1.5rem 1.5rem 0;
     border: none;
-    font-size: 2rem;
+    font-size: 2.2rem;
     background-color: #ccc;
     z-index: 10;
+    display: none;
 }
 
 div#sui-transSrcGo button.search:hover {
@@ -235,17 +247,20 @@ div#sui-transSrcGo button.search:focus {
     outline: none;
 }
 
-div#sui-transSrcGo button.search .icon {
-    margin-top: -15px;
-    display: inline-block;
+div#sui-transSrcGo button.search .icon::before {
+    position: relative;
+    top: -0.3rem;
+    font-weight: bold;
+    color: #555;
 }
 
 div#sui-transSrcGo .icon.clear {
     position: absolute;
-    top: 7.2rem;
-    right: 11.25%;
-    color: #aaa;
-    font-size: 1.3rem;
+    top: 0.4rem;
+    right: 3.25rem;
+    z-index: 10;
+    color: #ccc;
+    font-size: 2rem;
     cursor: pointer;
 }
 
@@ -253,7 +268,7 @@ div#sui-transSrcGo .icon.clear {
     background-color: #f6f872;
     border-radius: 10px;
 }
-
+/*
 @media screen and (max-width: 1440px) {
     div#sui-transSrcGo .icon.search {
         right: 54.5%;
@@ -321,6 +336,7 @@ div#sui-transSrcGo .icon.clear {
         right: 17%;
     }
 }
+*/
 
 /** Thumbnail Styles **/
 .av #meta-mlt {
