--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -135,7 +135,7 @@ aside#l-column__search--treeNav {
 
 .c-kmapleaf {
     margin-top: 0.1rem;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     max-width: inherit;
     overflow: hidden;
     .toggle-icon {
