Style update increases Kmaps-content full-width

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -60,7 +60,7 @@ body.html {
     }
 }
 .l-content__main__wrap {
-    max-width: 90rem;
+    /* max-width: 90rem; */
     margin: 0 auto;
 }
 .closeSideBar.l-content__rightsidebar,
