CSS update for AV transcript controls

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -4,9 +4,9 @@
     margin: 0 1rem;
     max-height: 50rem;
     overflow-y: scroll;
-    border: 2px solid #ddd;
-    border-width: 4px 2px 4px 1px;
-    border-radius: 0 0 3rem 0;
+    border: 2px solid #999;
+    border-width: 4px 1px 4px 1px;
+    border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.25rem;
     padding: 0 1rem 2rem;
