--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -68,6 +68,7 @@
 div#av-trscrpt-wrapper {
     height: inherit;
     letter-spacing: 0;
+    max-width: 50%;
 }
 
 #av-trscrpt-wrapper #sui-trans {
@@ -161,38 +162,55 @@ div#av-trscrpt-wrapper {
     display: flex;
 }
 #sui-transSrc .navigator {
-    display: inline-block;
-    margin: 2.2rem auto 0;
+    display: flex;
+    margin: 2.25rem 1.5rem 0;
     user-select: none;
-    flex-grow: 2;
+    flex-grow: 1;
+    min-width: 13rem;
+
     /* text-align: center;*/
     /* white-space:nowrap; */
 }
 #sui-transSrc .navwrapper {
-    min-width: 13rem;
     padding: 0 2rem;
+    display: flex;
+    flex-grow: 2;
+    justify-content: space-between;
+    vertical-align: middle;
+    color: white;
 }
 #sui-transSrc .navwrapper > div:last-child,
 #sui-transSrc .navwrapper > div:first-child {
-    font-size: 1.25rem !important;
+    font-size: 1.5rem !important;
+    display: flex;
+    align-self: center;
+    cursor: pointer;
 }
 #sui-transSrc .navwrapper > div:nth-of-type(2) {
-    margin: 0.25rem 0.5rem !important;
-    position: relative;
-    top: 0.35rem;
+    justify-content: center;
+    align-self: center;
+    font-size: 1.6rem;
+    min-width: 8rem;
+    display: flex;
 }
 div#sui-transSrcGo {
     margin-top: 1.75rem;
     position: relative;
+    display: flex;
+    min-width: 60%;
+    flex-grow: 1;
 }
 div#sui-transSrcGo input {
     color: #333;
+    display: flex;
+    flex-grow: 1;
+    min-width: 12rem;
     border: 1px solid #d0d0d0 !important;
     border-radius: 1.8rem;
     background-clip: padding-box;
     font-size: 1.85rem;
     height: 3.5rem;
-    margin: 0 2rem;
+    margin: 0 2rem 0 0;
     padding: 0 4rem;
     overflow: auto;
     vertical-align: middle;
@@ -208,7 +226,7 @@ div#sui-transSrcGo input:focus {
 
 div#sui-transSrcGo .icon.search {
     position: absolute;
-    right: 73%;
+    left: 1.7rem;
     top: 0.75rem;
     font-size: 1.75rem;
     color: #999;
@@ -218,10 +236,6 @@ div#sui-transSrcGo .icon.search {
 }
 .safari div#sui-transSrcGo .icon.search {
     right: 50%;
-}
-
-div#sui-transSrcGo input.sui-search2 {
-    max-width: 75%;
 }
 
 div#sui-transSrcGo button.search {
