--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -47,25 +47,25 @@
     margin-right: 19rem;
     padding-left: 1.75rem;
     padding-top: 0;
-    border-left: 0.2rem solid #d0d0d0;
-    border-right: 0.2rem solid #d0d0d0;
-    border-top: 0.3rem solid #4d59ca;
-    border-bottom: 0.1rem solid #4d59ca;
+    border: 0.1rem solid #4d59ca;
+    border-width: 0.3rem 0.2rem 0.1rem;
     margin-top: 0.25rem;
     min-width: 32rem;
-    box-shadow: inset 0 0 0.75rem #ddd;
+    box-shadow: inset 0 0.25rem 0.75rem #aaa;
 }
 .c-site__search > * {
-    display: inline;
+    display: flex;
 }
 
 .sui-search2 {
+    display: flex;
     font-style: italic;
     min-width: 35rem;
     font-size: 1.85rem;
-    padding: 0.25rem 2rem 0 1.25rem;
+    padding: 0 2rem 0 1.25rem;
     margin: 0;
     border: none !important;
+    background: transparent;
 }
 
 .l-search__input__buttons {
@@ -75,10 +75,10 @@
 }
 
 .sui-search3 {
-    font-size: 2rem;
+    font-size: 2.25rem;
     color: #ccc;
     cursor: pointer;
-    right: 0.5rem;
+    right: 1rem;
     position: relative;
 }
 
