--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -911,7 +911,7 @@ color: #a4baec;
     width: 180px;
     font-size: 13px;
     z-index: 1000;
-    top: 50px;
+    top: 6rem;
 }
 .sui-transSrc {
     background-color: #999;
@@ -927,6 +927,10 @@ color: #a4baec;
 .sui-transRow:hover {
     background-color: #f5f5f5;
 }
+.sui-transOps .sui-transRow:first-child {
+    font-style: italic;
+    font-size: 1.25rem;
+}
 .sui-transLab {
     padding: 0.5rem 1.2rem;
     background-color: #e8e8e8;
@@ -938,6 +942,14 @@ color: #a4baec;
     float: right;
     color: #ccc;
     font-size: 1.25rem;
+}
+.trans-opts-close {
+    font-size: 1.5rem;
+    color: #aaa;
+    font-style: normal;
+}
+.trans-opts-close:hover {
+    color: red;
 }
 .sui-transMinSeg {
     background-color: #fff;
