--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -893,14 +893,22 @@ color: #a4baec;
     width: calc(16.6667% - 1px);
     text-align: center;
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 2.1rem;
     color: #ccc;
     cursor: pointer;
-    padding-top: 12px;
+    padding-top: 1.8rem;
     border-right: 1px solid #ccc;
 }
 .sui-transTab:hover {
     background-color: #444;
+}
+.av-trscrpt-ctrls .sui-transTab:first-child {
+    font-size: 2.1rem;
+    padding-top: 1.8rem;
+}
+.av-trscrpt-ctrls .sui-transTab:nth-child(2) {
+    font-size: 1.9rem;
+    padding-top: 1.9rem;
 }
 .sui-transOps {
     position: absolute;
@@ -960,8 +968,8 @@ color: #a4baec;
     min-height: 70px;
 }
 .sui-transMinBox {
-    width: calc(100% - 174px);
-    margin: 0 0 0 150px;
+    /* width: calc(100% - 174px); */
+    margin: 0 0 0 4rem;
     border-left: 1px solid #eee;
     padding: 0 12px 6px 8px;
 }
@@ -970,10 +978,14 @@ color: #a4baec;
     color: #ccc;
     font-size: 20px;
     cursor: pointer;
-    border-radius: 16px;
+    /*  border-radius: 16px;
     width: 25px;
-    padding: 2px 0 0 4px;
+    padding: 2px 0 0 4px;*/
     margin: 6px 44px 0 0;
+
+    font-size: 22px;
+    cursor: pointer;
+    margin: 6px 15px 0 0;
 }
 .sui-transMinPlay:hover {
     background-color: #999;
@@ -981,35 +993,42 @@ color: #a4baec;
 }
 .sui-transSeg {
     background-color: #ddd;
-    border-radius: 6px 6px 0 0;
     padding-bottom: 2px;
     padding: 8px;
     width: calc(100% - 16px);
-    margin: 4px 0 4px 0;
-    min-height: 80px;
+    margin: 4px 0 4px 2px;
+    min-height: 8rem;
+}
+.sui-trans .sui-transSeg {
+    border-radius: 1rem 0 0 1rem;
 }
 .sui-transBox {
-    margin: 0 0 0 150px;
+    /*  margin: 0 0 0 14rem; */
     background-color: #fff;
     border-radius: 6px;
     padding: 12px;
-    width: calc(100% - 174px);
+    width: calc(100% - 14rem);
 }
 .sui-transPlay {
     color: #fff;
-    font-size: 1.65rem;
+    font-size: 1.75rem;
     cursor: pointer;
     border-radius: 6px;
-    width: 90px;
-    height: 26px;
-    padding: 2px 0 0 4px;
-    background-color: #bbb;
+    width: 8rem;
+    height: 2.6rem;
+    padding: 1px 0 0 8px;
+    background-color: #999;
     margin: 6px 44px 0 0;
+    margin: 0;
 }
 .sui-transPlay:hover {
-    background-color: #999;
+    background-color: #888;
 }
-
+.sui-transPlay-duration {
+    margin-left: 1.5rem;
+    font-size: 1.2rem;
+    vertical-align: 0.4rem;
+}
 /* SUBJECTS & PLACES TAB MENUS */
 .sui-spCat {
     width: calc(100% - 36px);
