--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -60,8 +60,9 @@
 .c-MainSearchToggle--button.active,
 .c-MainSearchToggle--button.active:hover,
 .c-MainSearchToggle--button.active:focus {
-    background-color: #4d59ca !important;
+    background-color: #6670d0 !important;
     opacity: 1;
+    box-shadow: inset 0 0 2rem #4d59ca !important;
 }
 
 .c-MainSearchToggle--group .c-MainSearchToggle--button.active {
