--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,7 +5,8 @@
     max-height: 50rem;
     overflow-y: scroll;
     border: 2px solid #999;
-    border-width: 4px 1px 4px 1px;
+    border-color: #929ae4 #ddd;
+    border-width: 0.3rem 0.1rem;
     border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.25rem;
