--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -771,8 +771,7 @@ ul.fancytree-container {
 }
 
 .c-view .c-featurePager__container:last-of-type {
-    margin: 0.4rem 1.5rem 0;
-    border-top: 3px solid #eee;
+    margin: 0 1.5rem;
 }
 
 .c-buttoneGroup__viewMode {
