--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -154,12 +154,11 @@
 
 .u-related__list__header {
     padding: 1rem 0 0.25rem 0.5rem;
-    margin: 0 1rem 0.8rem;
+    margin: 0 1rem;
     font-size: 1.45rem;
     font-weight: bold;
     color: #111;
     letter-spacing: 0.075rem;
-    border-bottom: 1px solid #ddd;
     text-transform: uppercase;
 }
 .l-related__list__wrap > .u-related__list__header {
