--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -5,8 +5,8 @@
     max-height: 50rem;
     overflow-y: scroll;
     border: 2px solid #999;
-    border-color: #929ae4 #ddd;
-    border-width: 0.3rem 0.1rem;
+    border-color: #929ae4 #929ae4 #929ae4 #ddd;
+    border-width: 0.2rem 0.15rem 0.3rem 0.1rem;
     border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.25rem;
@@ -21,7 +21,7 @@
     margin-right: 0;
     padding-top: 1rem;
     padding-left: 2rem;
-    border-width: 0 0.2rem 0.4rem 0;
+    border-width: 0 0.2rem 0.3rem 0;
 }
 .tree-test .c-kmaptree {
     height: 80vh;
