--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsResources/TermDefinitionsResources.css
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitionsResources/TermDefinitionsResources.css
@@ -7,15 +7,28 @@
     margin-right: 1.6rem;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark {
-    border-color: transparent;
     font-size: 1.5rem;
-    border: none;
+    border: 1px solid transparent;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark:hover {
-    background-color: #91693e;
+    background-color: #4d59ca;
+    border: 1px solid transparent;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark:hover span.icon {
     color: #f7fafc;
+}
+.sui-termDefResource__content
+    > .btn-outline-dark:not(:disabled):not(.disabled):active,
+.sui-termDefResource__content
+    > .btn-outline-dark:not(:disabled):not(.disabled).active,
+.sui-termDefResource__content > .show > .btn-outline-dark.dropdown-toggle {
+    background-color: #4d59ca;
+    border-color: #4d59ca;
+}
+.btn-outline-dark:not(:disabled):not(.disabled):active:focus,
+.btn-outline-dark:not(:disabled):not(.disabled).active:focus,
+.show > .btn-outline-dark.dropdown-toggle:focus {
+    box-shadow: none;
 }
 .sui-termDefResource__content > button.btn.btn-outline-dark .icon {
     margin-right: 0.8rem;
