--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -18,9 +18,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-gap: 0.8rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    //margin: 1.5rem 1rem 5rem;
+    margin: 0 2rem 3rem;
 }
 .card-deck .card {
     flex: 1 1 15%;
