CSS Updates for RightSideBar resize handlebar

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -16,12 +16,10 @@
 .l-column__search .c-kmaptree {
     max-height: 75rem;
     min-height: 75rem;
-    margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     padding-top: 1rem;
     padding-left: 2rem;
-    border-width: 0 0.2rem 0.3rem 0;
+    border-width: 0 0.1rem 0.3rem 0;
 }
 .tree-test .c-kmaptree {
     height: 80vh;
