--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -37,7 +37,7 @@ body.html {
     //height: 100vh; //causing issues with standalone
     /*  width: 100vw; */
     display: flex;
-    margin: 1rem 0 10rem 1rem;
+    margin: 1rem 1rem 10rem;
 }
 .l-site__wrap > *,
 .l-content__main,
@@ -48,12 +48,13 @@ body.html {
 
 .l-content__rightsidebar {
     margin: 0;
-    max-width: 45rem;
+    /* max-width: 45rem; */
     min-width: calc(max(25vw, 32rem));
     font-size: 1.4rem;
     background-color: #fff;
     resize: horizontal;
     overflow: visible !important;
+    border-left: 0.15rem solid #d0d0d0;
     .advanced-search-and-tree {
         border: none;
         margin-top: -3.4rem;
@@ -1113,4 +1114,45 @@ span.refdate {
     &:after {
         content: ')';
     }
+}
+
+.resize-column {
+    background: transparent;
+    flex: 0 0 0.5rem;
+}
+.resize-column div {
+    background-color: transparent;
+    cursor: col-resize;
+}
+.resize-column div::before {
+    height: 70rem;
+    position: relative;
+    left: -0.1rem;
+    top: 1rem;
+    display: inline-block;
+    content: '';
+    width: 1.25rem;
+    border: 1px solid #444cf7;
+    border-width: 1.5rem 0.1rem 1.5rem 0.2rem;
+    border-radius: 0.5rem 0 0 0.5rem;
+    opacity: 0.3;
+    transition: all 0.2s ease-in-out;
+}
+.resize-column:hover div::before {
+    opacity: 0.3;
+    left: -0.6rem;
+    border-left-width: 0.1rem;
+    background-color: #ccc;
+    background-size: 3px 3px;
+    background-image: repeating-linear-gradient(
+        0deg,
+        #444cf7,
+        #444cf7 1px,
+        #e5e5f7 1px,
+        #e5e5f7
+    );
+}
+.resize-column:active div::before {
+    opacity: 0.6;
+    background-color: #fff;
 }
