--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1122,10 +1122,11 @@ span.refdate {
 }
 .resize-column div {
     background-color: transparent;
-    cursor: col-resize;
+    cursor: default !important;
 }
 .resize-column div::before {
     height: 70rem;
+    cursor: col-resize;
     position: relative;
     left: -0.1rem;
     top: 1rem;
@@ -1155,6 +1156,7 @@ span.refdate {
 }
 .resize-column:active div::before {
     opacity: 0.6;
-    background-size: 0.35rem 0.35rem;
+    border-left-color: #929ae4;
+    background-size: 0.325rem 0.325rem;
     border-width: 1.5rem 0.1rem 1.5rem 0.1rem;
 }
